# cc-downloader

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: pull_request_template.md
.github/workflows/: rust.yml
src/: cli.rs  download.rs  lib.rs  main.rs
